Correction du z-index qui empêchait de voir les DropDrownMenu

--- a/src/app/generalites/generalites.component.sass
+++ b/src/app/generalites/generalites.component.sass
@@ -45,7 +45,7 @@ input[type=number]
   overflow-y: auto
   overflow-x: hidden
   transition: all 200ms
-  z-index: 1100
+  z-index: 1000
 
 #generalitesMenu.open
   width: 500px
